<resources>
    <string name="app_name">Polyglex</string>

    <!-- Strings related to login -->
    <string name="auth_failed">Wrong Email or Password</string>
    <string name="auth_failed2">That email is invalid or it is already being used</string>
    <string name="auth_failed3">One or multiple fields are empty</string>
    <string name="auth_failed4">Invalid username, username only accepts letters, numbers. Username\'s length should be at least 3 characters.</string>
    <string name="auth_failed5">Invalid password! Password should have at least 6 characters. Valid characters are letters, numbers, and the characters \"!@#%^$*?-,.\""</string>
    <string name="auth_failed6">That username already exists</string>
    <string name="auth_failed7">Unidentified sign up error</string>
    <string name="auth_failed8">That username does not exist</string>
    <string name="facebook_app_id">1488743317933580</string>
    <string name="fb_login_protocol_scheme">fb1488743317933580</string>
    <string name="prompt_username">Username or Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_cancel">Cancel</string>
    <string name="action_login">Login</string>
    <string name="action_sign_up">Sign up</string>
    <string name="action_log_out">Log out</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_submit">Submit</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="lang_spanish">Spanish</string>
    <string name="lang_english">English</string>
    <string name="lang_french">French</string>
    <string name="lang_german">German</string>
    <string name="lang_italian">Italian</string>
    <string name="lang_portuguese">Portuguese</string>
    <string name="lang_georgian">Georgian</string>
    <string name="lang_russian">Russian</string>
    <string name="lang_japanese">Japanese</string>
    <string name="lang_persian">Persian</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
       completions."
   </string>
    <string name="title_activity_main">MainActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_center">Center</string>
    <string-array name = "languages">
        <item>English</item>
        <item>French</item>
        <item>German</item>
        <item>Japanese</item>
        <item>Portuguese</item>
        <item>Spanish</item>
    </string-array>
</resources>