<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    tools:context="com.example.jake.polyglex.HomeActivity">
    <HorizontalScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/log_out_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/action_log_out"/>

            <Button
                android:id="@+id/english_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lang_english"/>

            <Button
                android:id="@+id/spanish_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lang_spanish"/>

            <Button
                android:id="@+id/french_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lang_french"/>

            <Button
                android:id="@+id/german_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lang_german"/>

            <Button
                android:id="@+id/italian_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lang_italian"/>
        </LinearLayout>

    </HorizontalScrollView>

    <FrameLayout
        android:id="@+id/fragment_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">
    </FrameLayout>

</LinearLayout>
